cluster/apps/actions-runner-system/actions-runner-controller/webhook/middleware-traefikCRD.yaml
---
# yaml-language-server: $schema=https://schemas.budimanjojo.com/traefik.containo.us/middleware_v1alpha1.json
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: arc-webhook
spec:
  rateLimit:
    average: 100
    burst: 50
