cluster/apps/actions-runner-system/actions-runner-controller/webhook/ingress-traefikCRD.yaml
---
# yaml-language-server: $schema=https://schemas.budimanjojo.com/traefik.containo.us/ingressroute_v1alpha1.json
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: actions-runner-controller-webhook
  labels:
    app.kubernetes.io/name: actions-runner-controller
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`arc-wh.${SECRET_DOMAIN_0}`)
      middlewares:
        - name: arc-webhook
      services:
        - name: actions-runner-controller-github-webhook-server
          port: 80
          namespace: actions-runner-system
  tls: {}
